@@ -7,3 +7,4 @@ rcsb.utils.validation >= 0.20
 backports.tempfile; python_version < "3.0"
 PyNaCl >= 1.3.0
 requests >= 2.23
+paramiko >=2.7
